Quorum3/Library/Tests/Actions/Pass/SimpleOneActionTwoParamsReturnInt.quorum
class Main
    action Main
         integer addedNumbers = Add(5, 10)
         output addedNumbers
    end

    action Add(integer a, integer b) returns integer
         return a + b
    end
end