Quorum3/Library/Tests/Actions/Fail/AssignmentAfterReturn.quorum
class Main 
    action Main
        return now
        integer a = 5
        integer b = 10
    end
end